# litellm-adk

./: .env.example  .gitignore  LICENSE  README.md  memory.json  pyproject.toml  vector_memory_plan.md
docs/: AGENT.md  DATABASE_AGENT.md  MEMORY.md  README.md  TOOLS.md
examples/: context_demo.py  demo.py  failover_demo.py  final_hitl_demo.py  memory_demo.py  minimal_hitl_demo.py  optimization_demo.py  production_nl2sql.py  session_demo.py  streaming_robustness_demo.py  vector_memory_demo.py
src/litellm_adk/: __init__.py
src/litellm_adk/adapters/: __init__.py  mongo_adapter.py  sql_adapter.py
src/litellm_adk/agents/: __init__.py  nl2sql.py
src/litellm_adk/config/: settings.py
src/litellm_adk/core/: __init__.py  adapter.py  agent.py  approval.py  base.py  base_agent.py  context.py  models.py  policy.py
src/litellm_adk/integrations/database/: agent.py
src/litellm_adk/integrations/database/mongo/: adapter.py  tools.py
src/litellm_adk/integrations/database/mysql/: adapter.py
src/litellm_adk/integrations/database/sql/: adapter.py  tools.py
src/litellm_adk/integrations/memory/local/: file.py  in_memory.py
src/litellm_adk/integrations/memory/remote/: mongodb.py
src/litellm_adk/integrations/memory/vector/backends/: chroma.py  mongo.py  postgres.py
src/litellm_adk/memory/: __init__.py  base.py  file.py  in_memory.py  mongodb.py  vector_store.py
src/litellm_adk/memory/backends/: chroma.py  mongo.py  postgres.py
src/litellm_adk/observability/: logger.py
src/litellm_adk/session/: session.py
src/litellm_adk/tools/: __init__.py  registry.py
