[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "litellm-adk"
version = "0.2.0"
description = "Production-grade multiservice Agent Development Kit"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "litellm>=1.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "pymongo>=4.0.0"
]

classifiers = [
  "Programming Language :: Python :: 3"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "mypy"
]

[tool.setuptools.packages.find]
where = ["src"]
